[gd_scene load_steps=3 format=3 uid="uid://dvstte0k1hs3h"]

[ext_resource type="Script" path="res://UI/SettingsMenu.gd" id="1_s8elq"]
[ext_resource type="AudioStream" uid="uid://dnm225nphpmr3" path="res://assets/sfx/soundtrack.ogg" id="2_8l5d5"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8elq")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -29.0
offset_right = 52.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "KeyMappings"

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="GridContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="MusicLabel" type="Label" parent="GridContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Music"

[node name="MusicButton" type="CheckButton" parent="GridContainer/VBoxContainer/HBoxContainer2"]
process_mode = 3
layout_mode = 2
flat = true

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="GridContainer"]
layout_mode = 2
min_value = -50.0
max_value = 10.0
step = 5.0

[node name="Use Controller" type="CheckButton" parent="GridContainer"]
process_mode = 3
layout_mode = 2
mouse_filter = 1
text = "Use Controller"

[node name="Controls" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="PlayButton" type="Button" parent="GridContainer"]
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_8l5d5")
volume_db = 10.0

[connection signal="toggled" from="GridContainer/VBoxContainer/HBoxContainer2/MusicButton" to="." method="_on_music_button_toggled"]
[connection signal="drag_ended" from="GridContainer/VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="toggled" from="GridContainer/Use Controller" to="." method="_on_use_controller_toggled"]
[connection signal="pressed" from="GridContainer/PlayButton" to="." method="_on_button_pressed"]
